# echoshader

./: .gitignore  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  LICENSE  README.md  Read_multiple_sonar_nc_files_zip.ipynb  gsoc_contributors_guide.md  hist_examples.ipynb  new_requirements.txt  proposal-template.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  track_examples.ipynb
.github/ISSUE_TEMPLATE/: gsoc-ideas.md  gsoc-project-component-ideas.md  gsoc-project-ideas.md  gsoc-proposal.md  gsoc-questions.md
.github/workflow/: pytest.yml
.github/workflows/: pypi.yaml  pytest.yml
docs/: requirements.txt
docs/source/: _config.yml  _toc.yml  conf.py  contributors_guide.md  gsoc_contributors_guide.md  index.md  intro.md  proposal-template.md
docs/source/GSoC/: Benchmarking.md
docs/source/echoshader_doc/: index.md
docs/source/echoshader_doc/GSoC/: Benchmarking.md  index.md
docs/source/echoshader_doc/version_0.1.0/: design_pattern.md  echogram_examples.ipynb  get_moored_data.ipynb  hist_examples.ipynb  index.md  setup_server.md  track_examples.ipynb
docs/source/gsoc/: contributors_guide.md  index.md
docs/source/gsoc/2022/: Benchmarking.md
docs/source/version_0.1.0/: hist_examples.ipynb  index.md  track_examples.ipynb
echoshader/: Test.ipynb  Test_1.ipynb  __init__.py  box.py  core.py  curtain.py  echogram.py  echomap.py  echostats.py  hist.py  map.py  utils.py
echoshader/dev/: echo_curtain.py  echo_gram.py  echo_lib.py  echo_map.py  echo_stats.py
echoshader/dev_class/: echo_curtain.py  echo_gram.py  echo_map.py  echo_stats.py
echoshader/dev_class/exports/HakeSurvey_10_Days/: MVBS_Summer2017-D20170724-T195420.nc  MVBS_Summer2017-D20170724-T195612.nc  MVBS_Summer2017-D20170724-T200129.nc  MVBS_Summer2017-D20170724-T212150.nc  MVBS_Summer2017-D20170724-T213607.nc  MVBS_Summer2017-D20170724-T214819.nc  MVBS_Summer2017-D20170724-T220049.nc  MVBS_Summer2017-D20170724-T221326.nc  MVBS_Summer2017-D20170724-T222603.nc  MVBS_Summer2017-D20170724-T223840.nc  MVBS_Summer2017-D20170724-T225116.nc  MVBS_Summer2017-D20170724-T230353.nc  MVBS_Summer2017-D20170724-T231629.nc  MVBS_Summer2017-D20170724-T232905.nc  MVBS_Summer2017-D20170724-T234140.nc  MVBS_Summer2017-D20170724-T235443.nc  MVBS_Summer2017-D20170725-T000815.nc  MVBS_Summer2017-D20170725-T002211.nc  MVBS_Summer2017-D20170725-T003606.nc  MVBS_Summer2017-D20170725-T005006.nc  MVBS_Summer2017-D20170725-T010406.nc  (+686 more)
echoshader/new_version/: Demo.ipynb  Test.ipynb  echogram.py  get_box.py  get_map.py  get_rgb.py  get_stats.py  get_string_list.py  test.ipynb
echoshader/new_version_2/: box.py  core.py  echogram.py  map.py  test.ipynb  utils.py
echoshader/new_version_3/: box.py  core.py  curtain.py  echogram.py  hist.py  map.py  test.ipynb  utils.py
echoshader/old_version/: Test.ipynb
echoshader/test/: test.ipynb  test_curtain.py  test_echogram.py  test_hist.py  test_track.py  test_tricolor_echogram.py
echoshader/tests/: test.py  test_curtain.py  test_echogram.py  test_hist.py  test_plots.py  test_track.py  test_tricolor_echogram.py
guide/: Benchmarking.md
notebooks/: Read_multiple_sonar_nc_files_zip.ipynb
temp_doc/: Moored_Echosounder_Data_Generate.ipynb  Pacific_Hake_Survey_Data_Generate.ipynb  design_pattern.md  echogram_examples.ipynb  get_moored_data.ipynb  get_ship_data.ipynb  index.md  show_echogram_control.ipynb  track_examples.ipynb
test/: test.ipynb
(+1850 files in other folders)
