[metadata]
name = echoshader
description = Open Source Python package for building ocean sonar data visualizations based on the HoloViz suite of Python tools.
author = echoshader contributors
author_email = ""
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OSOceanAcoustics/echoshader
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering
platforms = OS Independent

[options]
packages = find:
platforms = any
include_package_data = True
install_requires =
    xarray
    netCDF4
    zarr
    fsspec
python_requires = >=3.7
setup_requires =
    setuptools_scm

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-flake8
    pytest-xdist
    pytest-mock
lint =
    black
    check-manifest
    flake8
    flake8-builtins
    flake8-comprehensions
    flake8-mutable
    flake8-print
    isort
    mypy
    numpydoc
    pre-commit
    codespell
    pylint
docs =
    sphinx
    sphinx-automodapi
    sphinx_rtd_theme
    sphinxcontrib-mermaid
    jupyter-book
    numpydoc
    docutils<0.18
all =
    %(test)s
    %(lint)s
    %(docs)s
